v19022023 - update main page battleship

--- a/start.html
+++ b/start.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <img src="./imgs/ship.png" alt="ship">
   <h1>Play Battleship</h1>
   <button type="button" onclick="startBattheship()">play the game</button>
 
